Added reload command

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -21,3 +21,4 @@ onlyPlayers: "<red>Only players can execute this command!</red>"
 objectiveNoLocation: "<red>This objective does not require a specific location!</red>"
 updatedCompass: "<green>Your compass now points to this objective.</green>"
 canceledObjective: "<red>You have successfully canceled the objective.</red>"
+reloaded: "<green>The configurations have been reloaded.</green>"
