--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -16,3 +16,7 @@ dependencies:
       load: BEFORE
       required: true
       join-classpath: true
+    CalebCompass:
+      load: BEFORE
+      required: true
+      join-classpath: true
