--- a/src/main/resources/quests.yml
+++ b/src/main/resources/quests.yml
@@ -7,7 +7,7 @@
 # ╚═╝  ╚═══╝╚═╝ ╚═════╝╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚══════╝╚═╝     ╚═╝╚═╝  ╚═╝   ╚═╝   ╚══════╝ ╚═════╝ ╚══════╝╚══════╝╚═╝  ╚═╝╚═╝╚═════╝ ╚══════╝
 #
 # Copyright 2024 Nicklas Matzulla
-# GraphicalQuests v1.3.0
+# GraphicalQuests v1.4.0
 #
 
 #
@@ -16,4 +16,19 @@
 # The PlaceholderAPI is supported in ItemStacks.
 # The Minimessage format is supported in the entire configuration.
 # Minimessage documentation: https://docs.advntr.dev/minimessage/format.html
+#
+
+#
+# Each item can contain various options. An example item with all options is listed here:
+# item:
+#   material: "STONE"
+#   texture: "" # Texture hash for custom player heads
+#   customModelData: 0
+#   flags: # See https://jd.papermc.io/paper/1.20.6/org/bukkit/inventory/ItemFlag.html
+#     - HIDE_ATTRIBUTES
+#     - ...
+#   displayName: "Text" # MiniMessage is supported
+#   lore: # MiniMessage is supported
+#     - "Lore1"
+#     - "Lore2"
 #
